--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,9 @@
   "name": "jquery-sortable-lists",
   "main": "jquery-sortable-lists.min.js",
   "dependencies": {
-    "jquery": "~1"
+    "jquery": ">=1"
   },
-  "version": "1.0.8",
+  "version": "1.0.9",
   "homepage": "git@github.com:camohub/jquery-sortable-lists.git",
   "authors": [
     "Vladimír Čamaj <vladimir.camaj@gmail.com>"
