--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "jquery-sortable-lists",
   "main": "jquery-sortable-lists.min.js",
   "dependencies": {
-    "jquery": ">=1"
+    "jquery": ">=1 <3.0.0"
   },
   "version": "1.0.13",
   "homepage": "git@github.com:camohub/jquery-sortable-lists.git",
