--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "jquery-sortable-lists",
-  "main": "jquery-sortable-lists.min.js",
+  "main": "jquery-sortable-lists.js",
   "dependencies": {
     "jquery": ">=1 <3.0.0"
   },
-  "version": "1.0.13",
+  "version": "1.0.14",
   "homepage": "git@github.com:camohub/jquery-sortable-lists.git",
   "authors": [
     "Vladimír Čamaj <vladimir.camaj@gmail.com>"
