--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "jquery": ">=1 <3.0.0"
   },
   "author": "Vladimír Čamaj",
-  "license": "GNU",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/camohub/jquery-sortable-lists/issues"
   },
