--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
   "version": "1.1.0",
   "homepage": "git@github.com:camohub/jquery-sortable-lists.git",
   "authors": [
-    "Vladimír Čamaj <vladimir.camaj@gmail.com>"
+    "Vladimír Čamaj"
   ],
   "description": "jQuery plugin to sorting html lists also the tree structures",
   "keywords": [
