--- a/bower.json
+++ b/bower.json
@@ -1,26 +1,29 @@
 {
-  "name": "jquery-sortable-lists",
-  "main": "jquery-sortable-lists.js",
-  "dependencies": {
-    "jquery": ">=1 <3.0.0"
-  },
-  "version": "1.3.0",
-  "homepage": "git@github.com:camohub/jquery-sortable-lists.git",
-  "authors": [
-    "Vladimír Čamaj"
-  ],
-  "description": "jQuery plugin to sorting html lists also the tree structures",
-  "keywords": [
-    "jquery-plugin",
-    "jquery",
-    "ordering",
-    "lists",
-    "tree"
-  ],
-  "license": "GNU",
-  "ignore": [
-    "javascripts",
-    ".idea",
-    "package.json"
-  ]
+	"name": "jquery-sortable-lists",
+	"main": "jquery-sortable-lists.js",
+	"dependencies": {
+		"jquery": ">=1 <3.0.0"
+	},
+	"homepage": "https://github.com/camohub/jquery-sortable-lists.git",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/camohub/jquery-sortable-lists.git"
+	},
+	"authors": [
+		"Vladimír Čamaj"
+	],
+	"description": "jQuery plugin to sorting html lists also the tree structures",
+	"keywords": [
+		"jquery-plugin",
+		"jquery",
+		"ordering",
+		"lists",
+		"tree"
+	],
+	"license": "MIT",
+	"ignore": [
+		"javascripts",
+		".idea",
+		"package.json"
+	]
 }
